--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,13 @@
+body {
+  background-color: lightblue;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+#update-grid-button {
+  margin: auto;
+}
+
 .cell {
   width: 16px;
   height: 16px;
