--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,3 +17,27 @@ body {
 .red {
   background-color: red;
 }
+
+.black {
+  background-color: black;
+}
+
+.blue {
+  background-color: blue;
+}
+
+.cyan {
+  background-color: cyan;
+}
+
+.green {
+  background-color: green;
+}
+
+.magenta {
+  background-color: magenta;
+}
+
+.yellow {
+  background-color: yellow;
+}
