--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,53 +2,107 @@ body {
   background-color: whitesmoke;
 }
 
-.main-app {
-  margin-left: 2%;
-}
-
 #title {
   background-color: purple;
   color: white;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
-  margin-bottom: 3px;
+  position: fixed;
+  width: 100%;
+  z-index: 2;
 }
 
-#instructions {
+#main-app {
+  padding-left: 2%;
+  padding-top: 8%;
+  z-index: 1;
+}
+
+#instructions-menu {
+  padding: 23px 0px;
+  position: relative;
+}
+
+#color-menu {
+  padding: 23px 0px;
+  position: relative;
+}
+
+#instructions-label {
+  background-color: whitesmoke;
+  color: black;
+}
+
+.dropdown-menu {
+  opacity: 0.9;
+}
+
+.dropdown-menu li {
   font-family: cursive;
-  margin-bottom: 3px;
+  color: black;
+}
+
+#instructions-list li {
+  padding-left: 3px;
+  padding-bottom: 10px;
+}
+
+#color-list li {
+  padding-left: 3px;
+  padding-bottom: 5px;
+  vertical-align: middle;
+}
+
+.color-patch {
+  width: 12px;
+  height: 12px;
+  display: inline-block;
+  margin-right: 5px;
 }
 
 .cell {
   width: 16px;
   height: 16px;
-  border: 1px solid black;
+  background-color: black;
+  border: 1px solid gray;
+}
+
+.cell-hover {
+  border: 3px solid gray;
 }
 
 .red {
   background-color: red;
-}
-
-.black {
-  background-color: black;
+  border: 1px solid red;
+  text-shadow: 2px 2px black;
 }
 
 .blue {
   background-color: blue;
+  border: 1px solid blue;
+  text-shadow: 2px 2px black;
 }
 
 .cyan {
   background-color: cyan;
+  border: 1px solid cyan;
+  text-shadow: 2px 2px black;
 }
 
 .green {
   background-color: green;
+  border: 1px solid green;
+  text-shadow: 2px 2px black;
 }
 
 .magenta {
   background-color: magenta;
+  border: 1px solid magenta;
+  text-shadow: 2px 2px black;
 }
 
 .yellow {
   background-color: yellow;
+  border: 1px solid yellow;
+  text-shadow: 2px 2px black;
 }
