--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,7 @@ body {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   position: fixed;
-  width: 100%;
+  width: 720px;
   z-index: 1;
 }
 
@@ -45,7 +45,7 @@ body {
 
 #instructions-list li {
   padding-left: 3px;
-  padding-bottom: 5px;
+  padding-bottom: 8px;
 }
 
 #color-list li {
